# haskell-names

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGES.md  Makefile  README.md  ci-test  gen-iface.hs  gen.hs  haskell-modules.cabal  haskell-names.cabal  haskell-src-exts-1.21.0.yaml  nightly.yaml  open.hs  stack.yaml  syn.hs  test.hs
examples/: HeadUsages.hs  ModuleExports.hs
examples/moduleexports/: Example.hs
examples/moduleexports/Example/: Internal.hs
gen-iface/: .ghci  gen-iface.cabal  gen-iface.hs
gen-iface/src/: gen-iface.hs
hs-gen-iface/: .ghci  LICENSE  hs-gen-iface.cabal
hs-gen-iface/src/: hs-gen-iface.hs
hs-mk-global-db/: Main.hs  hs-mk-global-db.cabal
libraries/: packages.db
libraries/array-0.4.0.2/Data/: Array.names
libraries/array-0.4.0.2/Data/Array/: Base.names  IArray.names  IO.names  MArray.names  ST.names  Storable.names  Unboxed.names  Unsafe.names
libraries/base-4.7.0.0/: Foreign.names  Numeric.names  Prelude.names
libraries/base-4.7.0.0/Control/: Applicative.names  Arrow.names  Category.names  Concurrent.names  Exception.names  Monad.names
libraries/base-4.7.0.0/Control/Concurrent/: Chan.names  MVar.names  QSem.names  QSemN.names
libraries/base-4.7.0.0/Control/Exception/: Base.names
libraries/base-4.7.0.0/Control/Monad/: Fix.names  Instances.names  ST.names  Zip.names
libraries/base-4.7.0.0/Data/: Bits.names  Bool.names  Char.names  Complex.names  Data.names  Dynamic.names  Either.names  Eq.names  Fixed.names  Foldable.names  Function.names  Functor.names  IORef.names  Int.names  Ix.names  List.names  Maybe.names  Monoid.names  OldTypeable.names  Ord.names  Ratio.names  STRef.names  String.names  Traversable.names  Tuple.names  Typeable.names  Unique.names  Version.names  Word.names
libraries/base-4.7.0.0/Data/OldTypeable/: Internal.names
libraries/base-4.7.0.0/Data/STRef/: Lazy.names  Strict.names
libraries/base-4.7.0.0/Data/Typeable/: Internal.names
libraries/base-4.7.0.0/Debug/: Trace.names
libraries/base-4.7.0.0/Foreign/: C.names  Concurrent.names  Marshal.names  Ptr.names  Safe.names  StablePtr.names  Storable.names
libraries/base-4.7.0.0/Foreign/C/: Error.names  String.names  Types.names
libraries/base-4.7.0.0/Foreign/ForeignPtr/: Imp.names  Safe.names  Unsafe.names
libraries/base-4.7.0.0/Foreign/Marshal/: Alloc.names  Array.names  Error.names  Pool.names  Safe.names  Unsafe.names  Utils.names
libraries/base-4.7.0.0/GHC/: Arr.names  Base.names  Char.names  Conc.names  Desugar.names  Enum.names  Environment.names  Err.names  Event.names  Exception.names  Exts.names  Fingerprint.names  Float.names  Foreign.names  ForeignPtr.names  GHCi.names  Generics.names  IO.names  IOArray.names  IORef.names  IP.names  Int.names  List.names  MVar.names  Num.names  Pack.names  Profiling.names  Ptr.names  Read.names  Real.names  ST.names  STRef.names  Show.names  Stable.names  Stack.names  Stats.names  Storable.names  TopHandler.names  Unicode.names  Weak.names  (+1 more)
libraries/base-4.7.0.0/GHC/Conc/: IO.names  Signal.names  Sync.names
libraries/base-4.7.0.0/GHC/Event/: Array.names  Clock.names  Control.names  EPoll.names  IntMap.names  Internal.names  KQueue.names  Manager.names  PSQ.names  Poll.names  Thread.names  TimerManager.names  Unique.names
libraries/base-4.7.0.0/GHC/Fingerprint/: Type.names
libraries/base-4.7.0.0/GHC/Float/: ConversionUtils.names  RealFracMethods.names
libraries/base-4.7.0.0/System/: CPUTime.names  Environment.names  Exit.names  IO.names  Info.names  Mem.names  Timeout.names
libraries/base-4.7.0.0/Text/: Printf.names  Read.names  Show.names
libraries/base-4.7.0.0/Unsafe/: Coerce.names
libraries/base-4.7.0.0/include/: HsBaseConfig.h
libraries/ghc-prim-0.3.1.0/GHC/: CString.names  Classes.names  Debug.names  IntWord64.names  Magic.names  Prim.names  PrimopWrappers.names  Types.names
libraries/integer-simple-0.1.1.0/GHC/: Integer.names
src/Language/Haskell/: Modules.hs  Names.hs
tests/: Err1.hs  Err10.hs  Err10Exp.hs  Err2.hs  Err2Imp.hs  Err3.hs  Err4.hs  Err6.hs  Err7.hs  Err9.hs  Makefile  Tester.hs  run.hs  runtests  runtests.out.gold
tests/annotations/: Arrows.hs  Arrows.hs.golden  Case.hs  Case.hs.golden  ClassConstraints.hs  ClassConstraints.hs.golden  ClassInstances.hs  ClassInstances.hs.golden  Export.hs  Export.hs.golden  FnBind.hs  FnBind.hs.golden  Global.hs  Global.hs.golden  Infix.hs  Infix.hs.golden  Lambda.hs  Lambda.hs.golden  Let.hs  Let.hs.golden  ListComp.hs  ListComp.hs.golden  ParListComp.hs  ParListComp.hs.golden  Pats.hs  Pats.hs.golden  PatternSynonyms.hs  PatternSynonyms.hs.golden  QualifiedMethods.hs  QualifiedMethods.hs.golden  RecordFieldUpdate.hs  RecordFieldUpdate.hs.golden  RecordPattern.hs  RecordPattern.hs.golden  Records.hs  Records.hs.golden  Special.hs  Special.hs.golden  TypeSignature.hs  TypeSignature.hs.golden  (+8 more)
tests/environment/: Prelude.symbols.golden
tests/errors/: Err5.hs  Err7.hs  Err8.hs  runtests.out.gold
tests/exports/: DataFamilies.hs  DataFamilies.hs.golden  DuplicateExports.hs  DuplicateExports.hs.golden  E1.hs  E1.hs.golden  E2.hs  E2.hs.golden  E3.hs  E3.hs.golden  E4.hs  E4.hs.golden  E5.hs  E5.hs.golden  E7.hs  E7.hs.golden  E8.hs  E8.hs.golden  E9.hs  ExportAmbiguous.hs  ExportAmbiguous.hs.golden  ExportList.hs  ExportList.hs.golden  ExportList2.hs  ExportList2.hs.golden  ExportListMembers.hs  ExportListMembers.hs.golden  ExportListWildcards.hs  ExportListWildcards.hs.golden  ImplicitExportList.hs.golden  Library.hs  Library.hs.golden  M1.hs  M1.hs.golden  M2.hs  M2.hs.golden  M3.hs  M3.hs.golden  M4.hs  M4.hs.golden  (+28 more)
tests/imports/: ExplicitPrelude.hs  ExplicitPreludeQualified.hs  ExplicitPreludeQualified.hs.golden  Hiding.hs  Hiding.hs.golden  I1.hs  I2.hs  I3.hs  I4.hs  I5.hs  I6.hs  ImplicitPrelude.hs  ImplicitPrelude.hs.golden  ImportAll.hs  ImportAll.hs.golden  ImportList.hs  ImportList.hs.golden  M1.hs  M1.hs.golden  M2.hs  M2.hs.golden  M3.hs  M4.hs  M5.hs  M5.hs.golden  M6.hs  M6.hs.golden  NoImplicitPrelude.hs  NoImplicitPrelude.hs.golden  SimpleImport.hs  SimpleImport.hs.golden
utils/: install_base.sh
(+99 files in other folders)
