Name:                   haskell-modules
Version:                0.1
License:                BSD3
--License-File:           LICENSE
Author:                 Roman Cheplyaka, Lennart Augustsson
Maintainer:             Roman Cheplyaka <roma@ro-che.info>
Category:               Language
Synopsis:               Resolving Haskell module dependencies.
Description:            This is an addon to Haskell-Source with Extensions (HSE, haskell-src-exts).
                        It handles additional tasks on top of parsing:
                        .
                        * Chasing module dependencies to find all used modules.
                        .
                        * Resolving all names in the modules and giving them fully qualified names.
                        .
                        * Using symbol fixities to do the final parsing.
Stability:              Experimental
Tested-with:            GHC==6.12.1
Build-Type:             Simple
Cabal-Version:          >= 1.8

Library
  Build-depends:        base >= 4 && < 5, haskell-src-exts >= 1.9, mtl, filepath >= 1.1, containers >= 0.2, split >= 0.1.2 && < 0.2, cpphs >= 1.11, uniplate >= 1.5.1, tuple >= 0.2.0.1, aeson, bytestring, haskell-packages
  Hs-source-dirs:       src
  Ghc-options:          -Wall

  Exposed-modules:      Language.Haskell.Modules
                        Language.Haskell.Modules.Flags

                        Language.Haskell.Modules.Recursive
                        Language.Haskell.Modules.ScopeCheck
                        Language.Haskell.Modules.ScopeCheckMonad
                        Language.Haskell.Modules.SyntaxUtils
                        Language.Haskell.Modules.ModuleSymbols
                        Language.Haskell.Modules.GlobalSymbolTable
                        Language.Haskell.Modules.LocalSymbolTable
                        Language.Haskell.Modules.Imports
--Executable gen-iface
--  Build-depends:        base, containers, haskell-src-exts, haskell-modules, haskell-packages, filepath, mtl
--  Main-is: gen-iface.hs
