Name:                   haskell-names
Version:                0.5.1
License:                BSD3
Author:                 Philipp Schuster, Roman Cheplyaka, Lennart Augustsson
Maintainer:             Philipp Schuster
Category:               Language
Synopsis:               Name resolution library for Haskell
Description:
  For a high-level overview of this package,
  see <http://documentup.com/haskell-suite/haskell-names>
Homepage:               http://documentup.com/haskell-suite/haskell-names
Stability:              Experimental
Build-Type:             Simple
Cabal-Version:          >= 1.10

extra-source-files:
  README.md
  CHANGELOG.md
  tests/annotations/*.hs.golden
  tests/annotations/*.hs
  tests/imports/*.hs.golden
  tests/imports/*.hs
  tests/exports/*.hs.golden
  tests/exports/*.hs
data-files:
  libraries/ghc-prim-0.3.1.0/GHC/Debug.names
  libraries/ghc-prim-0.3.1.0/GHC/Types.names
  libraries/ghc-prim-0.3.1.0/GHC/Classes.names
  libraries/ghc-prim-0.3.1.0/GHC/IntWord64.names
  libraries/ghc-prim-0.3.1.0/GHC/PrimopWrappers.names
  libraries/ghc-prim-0.3.1.0/GHC/Prim.names
  libraries/ghc-prim-0.3.1.0/GHC/Magic.names
  libraries/ghc-prim-0.3.1.0/GHC/CString.names
  libraries/ghc-prim-0.3.1.0/GHC/Tuple.names
  libraries/integer-simple-0.1.1.0/GHC/Integer.names
  libraries/integer-simple-0.1.1.0/GHC/Integer/Logarithms.names
  libraries/integer-simple-0.1.1.0/GHC/Integer/Logarithms/Internals.names
  libraries/integer-simple-0.1.1.0/GHC/Integer/Simple/Internals.names
  libraries/integer-simple-0.1.1.0/GHC/Integer/Type.names
  libraries/array-0.4.0.2/Data/Array/IO.names
  libraries/array-0.4.0.2/Data/Array/Unboxed.names
  libraries/array-0.4.0.2/Data/Array/Unsafe.names
  libraries/array-0.4.0.2/Data/Array/ST.names
  libraries/array-0.4.0.2/Data/Array/IO/Safe.names
  libraries/array-0.4.0.2/Data/Array/IO/Internals.names
  libraries/array-0.4.0.2/Data/Array/Base.names
  libraries/array-0.4.0.2/Data/Array/MArray/Safe.names
  libraries/array-0.4.0.2/Data/Array/ST/Safe.names
  libraries/array-0.4.0.2/Data/Array/IArray.names
  libraries/array-0.4.0.2/Data/Array/Storable/Safe.names
  libraries/array-0.4.0.2/Data/Array/Storable/Internals.names
  libraries/array-0.4.0.2/Data/Array/Storable.names
  libraries/array-0.4.0.2/Data/Array/MArray.names
  libraries/array-0.4.0.2/Data/Array.names
  libraries/packages.db
  libraries/base-4.7.0.0/Numeric.names
  libraries/base-4.7.0.0/Prelude.names
  libraries/base-4.7.0.0/System/Exit.names
  libraries/base-4.7.0.0/System/Timeout.names
  libraries/base-4.7.0.0/System/Mem.names
  libraries/base-4.7.0.0/System/IO.names
  libraries/base-4.7.0.0/System/Environment/ExecutablePath.names
  libraries/base-4.7.0.0/System/Environment.names
  libraries/base-4.7.0.0/System/Info.names
  libraries/base-4.7.0.0/System/Mem/StableName.names
  libraries/base-4.7.0.0/System/Mem/Weak.names
  libraries/base-4.7.0.0/System/Console/GetOpt.names
  libraries/base-4.7.0.0/System/CPUTime.names
  libraries/base-4.7.0.0/System/IO/Unsafe.names
  libraries/base-4.7.0.0/System/IO/Error.names
  libraries/base-4.7.0.0/System/Posix/Internals.names
  libraries/base-4.7.0.0/System/Posix/Types.names
  libraries/base-4.7.0.0/include/consUtils.h
  libraries/base-4.7.0.0/include/EventConfig.h
  libraries/base-4.7.0.0/include/WCsubst.h
  libraries/base-4.7.0.0/include/Typeable.h
  libraries/base-4.7.0.0/include/HsBaseConfig.h
  libraries/base-4.7.0.0/include/HsBase.h
  libraries/base-4.7.0.0/include/OldTypeable.h
  libraries/base-4.7.0.0/Foreign.names
  libraries/base-4.7.0.0/Text/Read.names
  libraries/base-4.7.0.0/Text/Printf.names
  libraries/base-4.7.0.0/Text/Show.names
  libraries/base-4.7.0.0/Text/ParserCombinators/ReadPrec.names
  libraries/base-4.7.0.0/Text/ParserCombinators/ReadP.names
  libraries/base-4.7.0.0/Text/Show/Functions.names
  libraries/base-4.7.0.0/Text/Read/Lex.names
  libraries/base-4.7.0.0/Control/Concurrent/MVar.names
  libraries/base-4.7.0.0/Control/Concurrent/QSemN.names
  libraries/base-4.7.0.0/Control/Concurrent/Chan.names
  libraries/base-4.7.0.0/Control/Concurrent/QSem.names
  libraries/base-4.7.0.0/Control/Exception/Base.names
  libraries/base-4.7.0.0/Control/Exception.names
  libraries/base-4.7.0.0/Control/Applicative.names
  libraries/base-4.7.0.0/Control/Concurrent.names
  libraries/base-4.7.0.0/Control/Category.names
  libraries/base-4.7.0.0/Control/Monad.names
  libraries/base-4.7.0.0/Control/Monad/Instances.names
  libraries/base-4.7.0.0/Control/Monad/ST.names
  libraries/base-4.7.0.0/Control/Monad/ST/Safe.names
  libraries/base-4.7.0.0/Control/Monad/ST/Lazy/Safe.names
  libraries/base-4.7.0.0/Control/Monad/ST/Lazy/Imp.names
  libraries/base-4.7.0.0/Control/Monad/ST/Lazy/Unsafe.names
  libraries/base-4.7.0.0/Control/Monad/ST/Lazy.names
  libraries/base-4.7.0.0/Control/Monad/ST/Imp.names
  libraries/base-4.7.0.0/Control/Monad/ST/Unsafe.names
  libraries/base-4.7.0.0/Control/Monad/ST/Strict.names
  libraries/base-4.7.0.0/Control/Monad/Zip.names
  libraries/base-4.7.0.0/Control/Monad/Fix.names
  libraries/base-4.7.0.0/Control/Arrow.names
  libraries/base-4.7.0.0/Data/String.names
  libraries/base-4.7.0.0/Data/Data.names
  libraries/base-4.7.0.0/Data/Maybe.names
  libraries/base-4.7.0.0/Data/OldTypeable/Internal.names
  libraries/base-4.7.0.0/Data/Bits.names
  libraries/base-4.7.0.0/Data/STRef/Lazy.names
  libraries/base-4.7.0.0/Data/STRef/Strict.names
  libraries/base-4.7.0.0/Data/Fixed.names
  libraries/base-4.7.0.0/Data/Word.names
  libraries/base-4.7.0.0/Data/Bool.names
  libraries/base-4.7.0.0/Data/Int.names
  libraries/base-4.7.0.0/Data/List.names
  libraries/base-4.7.0.0/Data/Eq.names
  libraries/base-4.7.0.0/Data/Traversable.names
  libraries/base-4.7.0.0/Data/Char.names
  libraries/base-4.7.0.0/Data/Either.names
  libraries/base-4.7.0.0/Data/Dynamic.names
  libraries/base-4.7.0.0/Data/Unique.names
  libraries/base-4.7.0.0/Data/Function.names
  libraries/base-4.7.0.0/Data/STRef.names
  libraries/base-4.7.0.0/Data/Ratio.names
  libraries/base-4.7.0.0/Data/Ord.names
  libraries/base-4.7.0.0/Data/Foldable.names
  libraries/base-4.7.0.0/Data/Functor.names
  libraries/base-4.7.0.0/Data/Typeable/Internal.names
  libraries/base-4.7.0.0/Data/Ix.names
  libraries/base-4.7.0.0/Data/OldTypeable.names
  libraries/base-4.7.0.0/Data/Version.names
  libraries/base-4.7.0.0/Data/Complex.names
  libraries/base-4.7.0.0/Data/IORef.names
  libraries/base-4.7.0.0/Data/Tuple.names
  libraries/base-4.7.0.0/Data/Monoid.names
  libraries/base-4.7.0.0/Data/Typeable.names
  libraries/base-4.7.0.0/GHC/Float/RealFracMethods.names
  libraries/base-4.7.0.0/GHC/Float/ConversionUtils.names
  libraries/base-4.7.0.0/GHC/Generics.names
  libraries/base-4.7.0.0/GHC/Conc/IO.names
  libraries/base-4.7.0.0/GHC/Conc/Sync.names
  libraries/base-4.7.0.0/GHC/Conc/Signal.names
  libraries/base-4.7.0.0/GHC/IO.names
  libraries/base-4.7.0.0/GHC/Read.names
  libraries/base-4.7.0.0/GHC/Event/PSQ.names
  libraries/base-4.7.0.0/GHC/Event/Manager.names
  libraries/base-4.7.0.0/GHC/Event/KQueue.names
  libraries/base-4.7.0.0/GHC/Event/IntMap.names
  libraries/base-4.7.0.0/GHC/Event/Unique.names
  libraries/base-4.7.0.0/GHC/Event/Poll.names
  libraries/base-4.7.0.0/GHC/Event/Control.names
  libraries/base-4.7.0.0/GHC/Event/Array.names
  libraries/base-4.7.0.0/GHC/Event/Clock.names
  libraries/base-4.7.0.0/GHC/Event/EPoll.names
  libraries/base-4.7.0.0/GHC/Event/Thread.names
  libraries/base-4.7.0.0/GHC/Event/Internal.names
  libraries/base-4.7.0.0/GHC/Event/TimerManager.names
  libraries/base-4.7.0.0/GHC/Stable.names
  libraries/base-4.7.0.0/GHC/Weak.names
  libraries/base-4.7.0.0/GHC/Desugar.names
  libraries/base-4.7.0.0/GHC/Arr.names
  libraries/base-4.7.0.0/GHC/IP.names
  libraries/base-4.7.0.0/GHC/MVar.names
  libraries/base-4.7.0.0/GHC/Environment.names
  libraries/base-4.7.0.0/GHC/ConsoleHandler.names
  libraries/base-4.7.0.0/GHC/Enum.names
  libraries/base-4.7.0.0/GHC/Word.names
  libraries/base-4.7.0.0/GHC/Unicode.names
  libraries/base-4.7.0.0/GHC/Real.names
  libraries/base-4.7.0.0/GHC/Profiling.names
  libraries/base-4.7.0.0/GHC/IOArray.names
  libraries/base-4.7.0.0/GHC/Stats.names
  libraries/base-4.7.0.0/GHC/Int.names
  libraries/base-4.7.0.0/GHC/List.names
  libraries/base-4.7.0.0/GHC/Show.names
  libraries/base-4.7.0.0/GHC/Num.names
  libraries/base-4.7.0.0/GHC/ST.names
  libraries/base-4.7.0.0/GHC/TypeLits.names
  libraries/base-4.7.0.0/GHC/Char.names
  libraries/base-4.7.0.0/GHC/Pack.names
  libraries/base-4.7.0.0/GHC/Exception.names
  libraries/base-4.7.0.0/GHC/TopHandler.names
  libraries/base-4.7.0.0/GHC/Foreign.names
  libraries/base-4.7.0.0/GHC/STRef.names
  libraries/base-4.7.0.0/GHC/IO/FD.names
  libraries/base-4.7.0.0/GHC/IO/Exception.names
  libraries/base-4.7.0.0/GHC/IO/Handle/Text.names
  libraries/base-4.7.0.0/GHC/IO/Handle/Internals.names
  libraries/base-4.7.0.0/GHC/IO/Handle/Types.names
  libraries/base-4.7.0.0/GHC/IO/Handle/FD.names
  libraries/base-4.7.0.0/GHC/IO/Encoding/CodePage.names
  libraries/base-4.7.0.0/GHC/IO/Encoding/Failure.names
  libraries/base-4.7.0.0/GHC/IO/Encoding/UTF32.names
  libraries/base-4.7.0.0/GHC/IO/Encoding/Types.names
  libraries/base-4.7.0.0/GHC/IO/Encoding/UTF8.names
  libraries/base-4.7.0.0/GHC/IO/Encoding/UTF16.names
  libraries/base-4.7.0.0/GHC/IO/Encoding/Iconv.names
  libraries/base-4.7.0.0/GHC/IO/Encoding/Latin1.names
  libraries/base-4.7.0.0/GHC/IO/Device.names
  libraries/base-4.7.0.0/GHC/IO/Encoding.names
  libraries/base-4.7.0.0/GHC/IO/Handle.names
  libraries/base-4.7.0.0/GHC/IO/IOMode.names
  libraries/base-4.7.0.0/GHC/IO/Buffer.names
  libraries/base-4.7.0.0/GHC/IO/BufferedIO.names
  libraries/base-4.7.0.0/GHC/Err.names
  libraries/base-4.7.0.0/GHC/Base.names
  libraries/base-4.7.0.0/GHC/Stack.names
  libraries/base-4.7.0.0/GHC/Conc.names
  libraries/base-4.7.0.0/GHC/Fingerprint/Type.names
  libraries/base-4.7.0.0/GHC/Fingerprint.names
  libraries/base-4.7.0.0/GHC/ForeignPtr.names
  libraries/base-4.7.0.0/GHC/Exts.names
  libraries/base-4.7.0.0/GHC/Event.names
  libraries/base-4.7.0.0/GHC/GHCi.names
  libraries/base-4.7.0.0/GHC/Float.names
  libraries/base-4.7.0.0/GHC/IORef.names
  libraries/base-4.7.0.0/GHC/Storable.names
  libraries/base-4.7.0.0/GHC/Constants.names
  libraries/base-4.7.0.0/GHC/Ptr.names
  libraries/base-4.7.0.0/GHC/PArr.names
  libraries/base-4.7.0.0/Foreign/C.names
  libraries/base-4.7.0.0/Foreign/Safe.names
  libraries/base-4.7.0.0/Foreign/ForeignPtr/Safe.names
  libraries/base-4.7.0.0/Foreign/ForeignPtr/Imp.names
  libraries/base-4.7.0.0/Foreign/ForeignPtr/Unsafe.names
  libraries/base-4.7.0.0/Foreign/Marshal/Safe.names
  libraries/base-4.7.0.0/Foreign/Marshal/Alloc.names
  libraries/base-4.7.0.0/Foreign/Marshal/Utils.names
  libraries/base-4.7.0.0/Foreign/Marshal/Unsafe.names
  libraries/base-4.7.0.0/Foreign/Marshal/Array.names
  libraries/base-4.7.0.0/Foreign/Marshal/Error.names
  libraries/base-4.7.0.0/Foreign/Marshal/Pool.names
  libraries/base-4.7.0.0/Foreign/C/String.names
  libraries/base-4.7.0.0/Foreign/C/Types.names
  libraries/base-4.7.0.0/Foreign/C/Error.names
  libraries/base-4.7.0.0/Foreign/StablePtr.names
  libraries/base-4.7.0.0/Foreign/Concurrent.names
  libraries/base-4.7.0.0/Foreign/ForeignPtr.names
  libraries/base-4.7.0.0/Foreign/Marshal.names
  libraries/base-4.7.0.0/Foreign/Storable.names
  libraries/base-4.7.0.0/Foreign/Ptr.names
  libraries/base-4.7.0.0/Debug/Trace.names
  libraries/base-4.7.0.0/Unsafe/Coerce.names

source-repository head
  type:     git
  location: git://github.com/haskell-suite/haskell-names.git

Library
  Default-Language: Haskell2010
  Build-depends:
      base >= 4 && < 5
    , haskell-src-exts >= 1.16
    , mtl
    , transformers
    , filepath >= 1.1
    , containers >= 0.2
    , hse-cpp
    , uniplate >= 1.5.1
    , aeson
    , bytestring
    , haskell-packages >= 0.2
    , data-lens-light
    , tagged
    , traverse-with-class
    , type-eq >= 0.4.2
    , Cabal >= 1.14
  Hs-source-dirs:       src
  Ghc-options:          -Wall -fno-warn-name-shadowing

  Exposed-modules:      Language.Haskell.Names
                        Language.Haskell.Names.Open
                        Language.Haskell.Names.Annotated
                        Language.Haskell.Names.Interfaces
                        Language.Haskell.Names.GlobalSymbolTable
                        Language.Haskell.Names.LocalSymbolTable
                        Language.Haskell.Names.Imports
                        Language.Haskell.Names.Exports
                        Language.Haskell.Names.ModuleSymbols
                        Language.Haskell.Names.SyntaxUtils
                        Language.Haskell.Names.GetBound

  Other-modules:
                        Language.Haskell.Names.Open.Base
                        Language.Haskell.Names.Open.Instances
                        Language.Haskell.Names.Open.Derived
                        Language.Haskell.Names.Recursive
                        Language.Haskell.Names.Types
                        Language.Haskell.Names.RecordWildcards
                        Language.Haskell.Names.ScopeUtils
                        Paths_haskell_names

Test-suite test
  Default-Language: Haskell2010
  type:       exitcode-stdio-1.0
  Hs-source-dirs:
    tests
  Main-is:
    run.hs
  Build-depends:
      base >= 4 && < 5
    , haskell-src-exts >= 1.9
    , mtl
    , filepath >= 1.1
    , containers >= 0.2
    , hse-cpp
    , uniplate >= 1.5.1
    , aeson
    , bytestring
    , haskell-packages
    , tasty
    , tasty-golden >= 2.2.1
    , filemanip
    , utf8-string
      -- we have to fix the pretty-show version, because the change in the
      -- output format may affect the tests success
    , pretty-show >= 1.6.1 && < 1.7
    , Cabal
    , haskell-names
    , tagged
    , traverse-with-class
