Name:                   haskell-names
Version:                0.9.0
License:                BSD3
Author:                 Philipp Schuster, Roman Cheplyaka, Lennart Augustsson
Maintainer:             Philipp Schuster
Category:               Language
Synopsis:               Name resolution library for Haskell
Description:
  This package takes modules parsed with `haskell-src-exts`, resolves used names and annotates the parsed module with scoping information.
Homepage:               http://documentup.com/haskell-suite/haskell-names
Stability:              Experimental
Build-Type:             Simple
Cabal-Version:          >= 1.10
Tested-With:            GHC == 7.8.4, GHC == 7.10.1, GHC == 8.0.1

extra-source-files:
  README.md
  CHANGELOG.md
  tests/annotations/*.hs.golden
  tests/annotations/*.hs
  tests/imports/*.hs.golden
  tests/imports/*.hs
  tests/exports/*.hs.golden
  tests/exports/*.hs
  tests/environment/Prelude.symbols.golden
data-files:
  data/baseEnvironment/*.symbols

source-repository head
  type:     git
  location: git://github.com/haskell-suite/haskell-names.git

Library
  Default-Language: Haskell2010
  Build-depends:
      base >= 4 && < 5
    , haskell-src-exts >= 1.18 && < 1.20
    , mtl >= 2.2.1 && < 2.3
    , transformers >=0.4.2.0 && < 0.6
    , filepath >= 1.1 && < 1.5
    , containers >= 0.2 && < 0.6
    , uniplate >= 1.5.1 && < 1.7
    , aeson >= 0.8.0.2 && < 1.3
    , bytestring >= 0.10.4.0 && < 0.11
    , data-lens-light >= 0.1.2.1 && < 0.2
    , traverse-with-class >= 0.2.0.3 && < 0.3
  if impl(ghc <= 7.8)
    Build-depends: tagged >= 0.8.4 && < 0.9
  Hs-source-dirs:       src
  Ghc-options:          -Wall -fno-warn-name-shadowing

  Exposed-modules:      Language.Haskell.Names
                        Language.Haskell.Names.Open
                        Language.Haskell.Names.Annotated
                        Language.Haskell.Names.Environment
                        Language.Haskell.Names.GlobalSymbolTable
                        Language.Haskell.Names.LocalSymbolTable
                        Language.Haskell.Names.Imports
                        Language.Haskell.Names.Exports
                        Language.Haskell.Names.ModuleSymbols
                        Language.Haskell.Names.SyntaxUtils
                        Language.Haskell.Names.GetBound

  Other-modules:
                        Language.Haskell.Names.Open.Base
                        Language.Haskell.Names.Open.Instances
                        Language.Haskell.Names.Open.Derived
                        Language.Haskell.Names.Recursive
                        Language.Haskell.Names.Types
                        Language.Haskell.Names.RecordWildcards
                        Language.Haskell.Names.ScopeUtils
                        Paths_haskell_names

Test-suite test
  Default-Language: Haskell2010
  type:       exitcode-stdio-1.0
  Hs-source-dirs:
    tests
  Main-is:
    run.hs
  Build-depends:
      base >= 4 && < 5
    , haskell-names >= 0.9.0 && < 0.10
    , haskell-src-exts >= 1.18 && < 1.20
    , mtl >= 2.2.1 && < 2.3
    , filepath >= 1.1 && <1.5
    , containers >= 0.2 && < 0.6
    , tasty >= 0.10.1.2 && < 0.12
    , tasty-golden >= 2.2.1 && < 2.4
    , filemanip >= 0.3.6.3 && < 0.4
    , pretty-show >= 1.6.1 && < 1.7
    , traverse-with-class >= 0.2.0.3 && < 0.3

