Name:                   hs-gen-iface
Version:                0.1
License:                BSD3
Author:                 Roman Cheplyaka
Maintainer:             Roman Cheplyaka <roma@ro-che.info>
Category:               Language
Synopsis:               Utility to generate haskell-names interface files
Stability:              Experimental
Build-Type:             Simple
Cabal-Version:          >= 1.10

Executable hs-gen-iface
  Default-Language: Haskell2010
  ghc-options: -Wall -fno-warn-name-shadowing
  hs-source-dirs: src
  Main-is:
    hs-gen-iface.hs
  Other-modules:
    Paths_hs_gen_iface
  Build-depends:
    base,
    containers,
    haskell-src-exts,
    haskell-names,
    haskell-packages,
    filepath,
    mtl,
    Cabal,
    hse-cpp,
    tagged
