Name:                   hs-gen-iface
Version:                0.2
License:                MIT
License-file:           LICENSE
Author:                 Roman Cheplyaka
Maintainer:             Roman Cheplyaka <roma@ro-che.info>
Description:            Compiler which generates module interfaces for haskell-names
Category:               Language
Synopsis:               Utility to generate haskell-names interface files
Stability:              Experimental
Build-Type:             Simple
Cabal-Version:          >= 1.10

Executable hs-gen-iface
  Default-Language: Haskell2010
  ghc-options: -Wall -fno-warn-name-shadowing
  hs-source-dirs: src
  Main-is:
    hs-gen-iface.hs
  Other-modules:
    Paths_hs_gen_iface
  Build-depends:
    base == 4.*,
    containers,
    haskell-src-exts,
    haskell-names,
    haskell-packages,
    filepath,
    mtl,
    Cabal,
    hse-cpp,
    tagged
